# ClintBrowser

./: .gitignore  Attribution.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Code of Conduct.md  Contributing.md  Contributors.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build-native.yml  build.yml  build_fdroid.yml  buildarm64.yml  release.yml
Update/: Beta.json  Stable.json
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/github/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/JavaScript/: bottom_nav_detector.js  canvas_touch_detector.js  dark_mode.js  desktop_mode.js  disable_autoplay.js  image_alt_text.js  link_text.js  link_touch_tracker.js  quiver_guard_cosmetic.js  quiver_guard_removeparam.js  reader_mode.js  scroll_tracker.js  video_dimensions.js  web_notification_bridge.js
app/src/main/res/drawable/: badge_background.xml  chip_background.xml  fab_menu_pill_background.xml  ic_arrow_back_24.xml  ic_arrow_down_24.xml  ic_arrow_forward_24.xml  ic_arrow_up_24.xml  ic_brush_24.xml  ic_bug_24.xml  ic_clint_logo.xml  ic_contrast_24.xml  ic_copy_24.xml  ic_dark_mode_24.xml  ic_delete_24.xml  (+25 more)
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
native/quiverguard-jni/: Cargo.toml  README.md
native/quiverguard-jni/src/: bundled_resources.rs  lib.rs
native/quiverguard-jni/tools/: extract-redirects.mjs  extract-scriptlets.mjs  generate_resources.py
(+306 files in other folders)
